--- a/.github/workflows/create_changelog.yml
+++ b/.github/workflows/create_changelog.yml
@@ -19,27 +19,29 @@ jobs:
             echo "Milestone title is not a valid version. Skipping."
             exit 0
           fi
+
           DIR="website/docs/changelog"
           FILE="$DIR/$VERSION.md"
+
           mkdir -p "$DIR"
+
           if [ -f "$FILE" ]; then
             echo "Changelog file already exists: $FILE"
             exit 0
           fi
+
           cat <<EOF > "$FILE"
-Not yet released.
-
-### 🐛 Bug fixes
-- 
-
-EOF
+          Not yet released.
+          ### 🐛 Bug fixes
+          - 
+          EOF
 
       - name: Commit and push changelog
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add website/docs/changelog/*.md
-          git commit -m "chore: add changelog for version ${{ github.event.milestone.title }}" || exit 0
+          git add "website/docs/changelog/$VERSION.md"
+          git commit -m "chore: add changelog for version $VERSION" || exit 0
           git push
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
