--- a/.github/workflows/create_changelog.yml
+++ b/.github/workflows/create_changelog.yml
@@ -12,6 +12,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Generate changelog file
+        shell: bash
         run: |
           VERSION="${{ github.event.milestone.title }}"
           # Ensure valid version format N.N.N
@@ -31,13 +32,16 @@ jobs:
           fi
 
           cat <<EOF > "$FILE"
-          Not yet released.
-          ### 🐛 Bug fixes
-          - 
-          EOF
+Not yet released.
+
+### 🐛 Bug fixes
+- 
+
+EOF
 
       - name: Commit and push changelog
         run: |
+          VERSION="${{ github.event.milestone.title }}"
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add "website/docs/changelog/$VERSION.md"
