--- a/.github/workflows/create_changelog.yml
+++ b/.github/workflows/create_changelog.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Generate changelog file
+      - name: Create changelog file from template
         shell: bash
         run: |
           VERSION="${{ github.event.milestone.title }}"
@@ -19,16 +19,17 @@ jobs:
             echo "Milestone title is not a valid version. Skipping."
             exit 0
           fi
+
           DIR="website/docs/changelog"
           FILE="$DIR/$VERSION.md"
           mkdir -p "$DIR"
+
           if [ -f "$FILE" ]; then
             echo "Changelog file already exists: $FILE"
             exit 0
           fi
-          echo "Not yet released.
-### 🐛 Bug fixes
-" > "$FILE"
+
+          cp .github/GIT_TEMPLATE/changelog-template.md "$FILE"
 
       - name: Commit and push changelog
         shell: bash
