--- a/.github/workflows/create_changelog_for_milestone.yml
+++ b/.github/workflows/create_changelog_for_milestone.yml
@@ -34,12 +34,12 @@ jobs:
       - name: Commit and push changelog
         shell: bash
         env:
-          PAT: ${{ secrets.PAT }}
+          TOKEN: ${{ secrets.TOKEN }}
         run: |
           VERSION="${{ github.event.milestone.title }}"
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add "website/docs/changelog/$VERSION.md"
           git commit -m "chore: add changelog for version $VERSION" || exit 0
-          git push https://x-access-token:${PAT}@github.com/${{ github.repository }}.git
+          git push https://x-access-token:${TOKEN}@github.com/${{ github.repository }}.git
 
