--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -46,11 +46,14 @@ jobs:
         shell: bash
         run: |
           PANEL_VERSION="${{ steps.fetch_version.outputs.version }}"
-          echo "PANEL_VERSION: $PANEL_VERSION"
-          ls -l install.sh
           sed -i -E 's/(PANEL_VERSION=")[^"]+(" # fallback if hub.docker.com unreachable)/\1'"$PANEL_VERSION"'\2/' install.sh
-          git diff install.sh || true
 
+      - name: Update in README.md
+        shell: bash
+        run: |
+          PANEL_VERSION="${{ steps.fetch_version.outputs.version }}"
+          sed -i -E "s#(Latest OpenPanel version is: \*\*)[0-9\.]+(\*\* - \[View Changelog\]\(https://openpanel.com/docs/changelog/)[0-9\.]+(/\))#\1$PANEL_VERSION\2$PANEL_VERSION\3#" README.md
+      
       - name: Commit and push changes if any
         env:
           TOKEN: ${{ secrets.TOKEN }}
