--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -52,8 +52,8 @@ jobs:
         shell: bash
         run: |
           PANEL_VERSION="${{ steps.fetch_version.outputs.version }}"
-          sed -i -E "s#(Latest OpenPanel version is: \*\*)[0-9\.]+(\*\* - \[View Changelog\]\(https://openpanel.com/docs/changelog/)[0-9\.]+(/\))#\1$PANEL_VERSION\2$PANEL_VERSION\3#" README.md
-      
+          sed -i -E "s/(\*\*)[0-9]+\.[0-9]+\.[0-9]+(\*\* - \[View Changelog\]\(https:\/\/openpanel\.com\/docs\/changelog\/)[0-9]+\.[0-9]+\.[0-9]+(\))/\1$PANEL_VERSION\2$PANEL_VERSION\3/" README.md
+
       - name: Commit and push changes if any
         env:
           TOKEN: ${{ secrets.TOKEN }}
