--- a/.github/workflows/sync-configuration.yml
+++ b/.github/workflows/sync-configuration.yml
@@ -44,7 +44,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          git add translations configuration opencli
+          git add translations configuration opencli integrations
           if ! git diff --cached --quiet; then
             git commit -m "chore: sync folders from upstream"
             git push origin main
