--- a/.github/workflows/close_issue_add_to_changelog.yml
+++ b/.github/workflows/close_issue_add_to_changelog.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   update-changelog:
-    if: "github.event.issue.milestone != null && github.event.issue.state == 'closed'"
+    if: github.event.issue.milestone != null && github.event.issue.state == 'closed'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -15,17 +15,15 @@ jobs:
       - name: Check if issue has completed label
         id: check_completed_label
         run: |
-          has_completed=$(jq -r '.[] | select(.name == "completed") | .name' <<EOF
-      ${{ toJSON(github.event.issue.labels) }}
-      EOF
-          )
-      
+          labels=("${{ toJSON(github.event.issue.labels) }}")
+          # Use jq to check labels names
+          has_completed=$(echo "${labels}" | jq -r '.[] | select(.name == "completed") | .name' || echo "")
           if [[ "$has_completed" == "completed" ]]; then
             echo "completed=true" >> "$GITHUB_OUTPUT"
           else
             echo "completed=false" >> "$GITHUB_OUTPUT"
           fi
-    
+
       - name: Stop if issue not completed
         if: steps.check_completed_label.outputs.completed != 'true'
         run: |
