--- a/website/blog/authors.yml
+++ b/website/blog/authors.yml
@@ -1,7 +1,7 @@
 stefanpejcic:
   name: Stefan Pejcic
   title: System Administrator
-  image_url: /img/generic-profile.png
+  image_url: /img/stefan_pejcic.jpeg
 
 radovan_jecmenica:
   name: Radovan Jecmenica
