--- a/website/blog/authors.yml
+++ b/website/blog/authors.yml
@@ -1,9 +1,9 @@
 stefanpejcic:
   name: Stefan Pejcic
-  title: System Administrator
+  title: Co-Founder and CEO of OpenPanel
   image_url: /img/stefan_pejcic.jpeg
 
 radovan_jecmenica:
   name: Radovan Jecmenica
-  title: Web Developer
+  title: System Administrator
   image_url: /img/generic-profile.png
